# dissertation

./: .gitignore  benchmark.py  best_bilstm_small.pt  best_cnnlstm.pt  best_cnnlstm_small.pt  best_pet.pt  best_transformer.pt  compute_rmse.py  final_ADS1298_bom_1.xlsx  main.py  other_models.py  pet.py  pyproject.toml  quantise.py  tflite_pred_0.npy
checkpoints/: best_bilstm.pt  best_pet_small.pt  best_tcn.pt
firmware/: CMakeLists.txt  Kconfig  benchmark.conf  build_benchmark.sh  get_tflm.sh  nrf52840dk_nrf52840.overlay  nrf52840dk_nrf52840_benchmark_usb.overlay  prj.conf  prj_benchmark_usb.conf
firmware/src/: main.c  model_runner.cc  model_runner.h  model_runner_stub.c
firmware/src/models/: bilstm_model.h  bilstm_small_model.h  cnnlstm_small_model.h  pet_small_model.h  tcn_model.h  transformer_model.h
results/: results.csv
scripts/: compare_tflite_vs_firmware.py  inspect_tflite.py  patch_concat_shapes.py  patch_while_to_dus.py
text_files/: bib.bib  main.tex
tflite_models/: bilstm.onnx  bilstm.onnx.data  bilstm_int8.tflite  bilstm_small.onnx  bilstm_small_int8.tflite  cnnlstm.onnx  cnnlstm.onnx.data  cnnlstm_int8.tflite  cnnlstm_small_int8.tflite  cnnlstm_small_int8.tflite.orig.tflite  pet.onnx  pet.onnx.data  pet_int8.tflite  pet_small_int8.tflite  tcn.onnx  tcn.onnx.data  tcn_int8.tflite  transformer.onnx  transformer.onnx.data  transformer_int8.tflite
tflite_models/bilstm_int8_saved_model/: fingerprint.pb  saved_model.pb
tflite_models/bilstm_int8_saved_model/variables/: variables.data-00000-of-00001  variables.index
tflite_models/tcn_int8_saved_model/: fingerprint.pb  saved_model.pb  tcn_float16.tflite  tcn_float32.tflite
tflite_models/tcn_int8_saved_model/variables/: variables.data-00000-of-00001  variables.index
tflite_models/tcn_tf/: fingerprint.pb  saved_model.pb
tflite_models/tcn_tf/variables/: variables.data-00000-of-00001  variables.index
